# kokkos

./: .appveyor.yml  .clang-format  .clang-format-ignore  .clang-tidy  .cmake-format.py  .codecov.yml  .env  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .jenkins  .jenkins_nightly  .olcf-gitlab-ci.yml  .travis.yml  BUILD.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CTestConfig.cmake  CTestRun.cmake  Copyright.txt  DEVELOPER.md  LICENSE  LICENSE_FILE_HEADER  Makefile.kokkos  Makefile.targets  README  README.md  appveyor.yml  cm_generate_makefile.bash  configure.sh  docker-compose.yml  generate_makefile.bash  gnu_generate_makefile.bash  iwyu-kokkos.json  master_history.txt  (+1 more)
algorithms/: CMakeLists.txt
algorithms/benchmarks/: BenchmarkStdAlgorithmsForEach.cpp  CMakeLists.txt
algorithms/cmake/: Dependencies.cmake
algorithms/perf_test/: CMakeLists.txt  test_inclusive_scan.cpp
algorithms/src/: CMakeLists.txt  KokkosAlgorithms_dummy.cpp  Kokkos_Algo.hpp  Kokkos_NestedSort.hpp  Kokkos_RadixSort.hpp  Kokkos_Random.ccm  Kokkos_Random.hpp  Kokkos_Random.hpp_  Kokkos_Sort.ccm  Kokkos_Sort.hpp  Kokkos_StdAlgorithms.ccm  Kokkos_StdAlgorithms.hpp  Kokkos_StdAlgorithmsImpl.ccm
algorithms/unit_tests/: CMakeLists.txt  Makefile  TestBinSortA.cpp  TestBinSortA.hpp  TestBinSortB.cpp  TestBinSortB.hpp  TestCuda.cpp  TestHPX.cpp  TestNestedSort.cpp  TestNestedSort.hpp  TestOpenMP.cpp  TestOpenMP_Random.cpp  TestOpenMP_Sort1D.cpp  TestOpenMP_Sort3D.cpp  TestOpenMP_SortDynamicView.cpp  TestROCm.cpp  TestRandom.cpp  TestRandom.hpp  TestRandomAccessIterator.cpp  TestRandomCommon.hpp  TestReductionBug.cpp  TestSYCL.cpp  TestSerial.cpp  TestSort.cpp  TestSort.hpp  TestSortByKey.hpp  TestSortCommon.hpp  TestSortCustomComp.cpp  TestSortCustomComp.hpp  TestStdAlgorithms.cpp  TestStdAlgorithmsAdjacentDifference.cpp  TestStdAlgorithmsAdjacentFind.cpp  TestStdAlgorithmsAllAnyNoneOf.cpp  TestStdAlgorithmsCommon.cpp  TestStdAlgorithmsCommon.hpp  TestStdAlgorithmsCommon2.cpp  TestStdAlgorithmsCommon2.hpp  TestStdAlgorithmsCompileOnly.cpp  TestStdAlgorithmsConstraints.cpp  TestStdAlgorithmsCopyIf.cpp  (+110 more)
cmake_test/: CMakeLists.txt
cmake_test/complex/: CMakeLists.txt
cmake_test/complex_mark_kokkos_files/: CMakeLists.txt
cmake_test/complex_mark_library/: CMakeLists.txt
cmake_test/launch_compiler/: CMakeLists.txt  test_no_kokkos.cpp
cmake_test/test_source/: test_interface_interface.cpp  test_interface_public.cpp  test_private.cpp  test_private_public.cpp  test_public_private.cpp  test_public_public.cpp
containers/: CMakeLists.txt
containers/cmake/: Dependencies.cmake
containers/performance_tests/: CMakeLists.txt  Makefile  TestCuda.cpp  TestDualView.hpp  TestDynRankView.hpp  TestGlobal2LocalIds.hpp  TestHIP.cpp  TestHPX.cpp  TestMain.cpp  TestOpenMP.cpp  TestROCm.cpp  TestReductionView.hpp  TestScatterView.hpp  TestThreads.cpp  TestUnorderedMapPerformance.hpp
containers/src/: CMakeLists.txt  Kokkos_Bitset.ccm  Kokkos_Bitset.hpp  Kokkos_DualView.ccm  Kokkos_DualView.hpp  Kokkos_DynRankView.ccm  Kokkos_DynRankView.hpp  Kokkos_DynamicView.ccm  Kokkos_DynamicView.hpp  Kokkos_ErrorReporter.ccm  Kokkos_ErrorReporter.hpp  Kokkos_Few.hpp  Kokkos_Functional.ccm  Kokkos_Functional.hpp  Kokkos_OffsetView.ccm  Kokkos_OffsetView.hpp  Kokkos_ReductionView.hpp  Kokkos_ScatterView.ccm  Kokkos_ScatterView.hpp  Kokkos_SegmentedView.hpp  Kokkos_StaticCrsGraph.hpp  Kokkos_UnorderedMap.ccm  Kokkos_UnorderedMap.hpp  Kokkos_Vector.hpp
containers/unit_tests/: CMakeLists.txt  Makefile  TestBitset.hpp  TestCompileMain.cpp  TestComplex.hpp  TestCreateMirror.cpp  TestCreateMirror.hpp  TestCuda.cpp  TestDualView.hpp  TestDualViewParameterPack.cpp  TestDynRankView.hpp  TestDynRankViewTypedefs.cpp  TestDynRankView_TeamScratch.hpp  TestDynViewAPI.hpp  TestDynViewAPI_generic.hpp  TestDynViewAPI_rank12345.hpp  TestDynViewAPI_rank67.hpp  TestDynamicView.hpp  TestErrorReporter.hpp  TestIsViewTrait.cpp  TestOffsetView.hpp  TestOpenMP.cpp  TestPaddingPropagation.hpp  TestReductionView.hpp  TestScatterView.hpp  TestSegmentedView.hpp  TestSerial.cpp  TestStaticCrsGraph.hpp  TestThreads.cpp  TestUnorderedMap.hpp  TestUnorderedSet.hpp  TestVector.hpp  TestViewCtorPropEmbeddedDim.hpp  TestWithoutInitializing.hpp  UnitTestMain.cpp
core/: CMakeLists.txt
core/cmake/: Dependencies.cmake  KokkosCore_config.h.in  kokkos-config.cmake.in
core/perf_test/: BenchmarkMain.cpp  Benchmark_Context.cpp  Benchmark_Context.hpp  Benchmark_Sample.cpp  Benchmark_ViewCopy.cpp  Benchmark_ViewCopy.hpp  CMakeLists.txt  Makefile  MicroBench_ParallelForOverheads.cpp  PerfTestBlasKernels.hpp  PerfTestCuda.cpp  PerfTestDriver.hpp  PerfTestGramSchmidt.cpp  PerfTestGramSchmidt.hpp  PerfTestHexGrad.cpp  PerfTestHost.cpp  PerfTestMDRange.hpp  PerfTestMain.cpp  PerfTest_Category.hpp  PerfTest_CustomReduction.cpp  PerfTest_ExecSpacePartitioning.cpp  PerfTest_FenceOverhead.cpp  PerfTest_KernelName.cpp  PerfTest_ParallelFor.cpp  PerfTest_PtrAccess.cpp  PerfTest_Random.cpp  PerfTest_Stream.cpp  PerfTest_ViewAllocate.cpp  PerfTest_ViewCopy.cpp  PerfTest_ViewCopy.hpp  PerfTest_ViewCopy_Raw.cpp  PerfTest_ViewCopy_a123.cpp  PerfTest_ViewCopy_a45.cpp  PerfTest_ViewCopy_a6.cpp  PerfTest_ViewCopy_a7.cpp  PerfTest_ViewCopy_a8.cpp  PerfTest_ViewCopy_b123.cpp  PerfTest_ViewCopy_b45.cpp  PerfTest_ViewCopy_b6.cpp  PerfTest_ViewCopy_b7.cpp  (+43 more)
core/src/: CMakeLists.txt  KokkosExp_InterOp.hpp  KokkosExp_MDRangePolicy.hpp  KokkosExp_View.hpp  KokkosP_Interface.hpp  Kokkos_Abort.hpp  Kokkos_AcquireUniqueTokenImpl.hpp  Kokkos_AnonymousSpace.hpp  Kokkos_ArithmeticTraits.hpp  Kokkos_Array.hpp  Kokkos_Assert.hpp  Kokkos_Atomic.hpp  Kokkos_Atomics_Desul_Config.hpp  Kokkos_Atomics_Desul_Volatile_Wrapper.hpp  Kokkos_Atomics_Desul_Wrapper.hpp  Kokkos_BitManipulation.hpp  Kokkos_CheckUsage.hpp  Kokkos_CilkPlus.hpp  Kokkos_Clamp.hpp  Kokkos_Complex.hpp  Kokkos_Concepts.hpp  Kokkos_CopyViews.hpp  Kokkos_Core.hpp  Kokkos_Core_fwd.hpp  Kokkos_CppThreads.hpp  (+93 more)
profiler/: CMakeLists.txt
python/: CMakeLists.txt  libpykokkos.cpp
(+3996 files in other folders)
