

TRIBITS_SUBPACKAGE(Containers)

# include other dependencies

IF (NOT KOKKOS_HAS_TRILINOS)
  SET (CORE_BUILD_DIRS "${CMAKE_CURRENT_BINARY_DIR}/../core/src")
  SET (CORE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/../core/src")
  INCLUDE_DIRECTORIES (${CORE_BUILD_DIRS} ${CORE_DIRS})
ENDIF ()

ADD_SUBDIRECTORY(src)

TRIBITS_ADD_TEST_DIRECTORIES(unit_tests)
TRIBITS_ADD_TEST_DIRECTORIES(performance_tests)

TRIBITS_SUBPACKAGE_POSTPROCESS()
