IF (NOT Kokkos_INSTALL_TESTING)
  ADD_SUBDIRECTORY(src)
ENDIF()

FUNCTION(KOKKOS_ADD_BENCHMARK_DIRECTORY DIR_NAME)
  IF(NOT Kokkos_ENABLE_BENCHMARKS)
    RETURN()
  ENDIF()

  ADD_SUBDIRECTORY(${DIR_NAME})
ENDFUNCTION()

KOKKOS_ADD_TEST_DIRECTORIES(unit_test)
KOKKOS_ADD_BENCHMARK_DIRECTORY(perf_test)
